--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,7 @@
 @media screen and (max-width: 750px) {
   .main-avatar {
     width: 150px;
-    border-radius: 50%;
-    border: 3px solid #ddd;
-    box-shadow: 0 0 12px rgba(0, 0, 0, 0.6);
+    border: 3px solid #6B6F69;
   }
 
   summary {
@@ -17,9 +15,7 @@
 @media screen and (min-width: 750px) {
   .main-avatar {
     width: 200px;
-    border-radius: 50%;
-    border: 2px solid #ddd;
-    box-shadow: 0 0 8px rgba(0, 0, 0, 0.6);
+    border: 2px solid #6B6F69;
   }
 
   summary {
@@ -29,28 +25,98 @@
   }
 }
 
+@media screen and (max-width: 430px) {
+  .main-avatar-container details {
+    width: 217px !important;
+    font-size: 10px;
+  }
+
+  .main-paper-content {
+    width: 100%;
+    margin: 20px;
+    background-color: white;
+    border: 1px solid #ccc;
+    border-radius: 2px;
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.2);
+  }
+
+  .main-avatar-container {
+    padding: 20px;
+    height: 220px;
+    background-color: #B0E0E6;
+  }
+}
+
+@media screen and (min-width: 430px) {
+  .main-paper-content {
+    display: flex;
+    width: 100%;
+    margin: 20px;
+    background-color: white;
+    border: 1px solid #ccc;
+    border-radius: 2px;
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.2);
+  }
+}
+
+
+.main-avatar-container {
+  padding: 20px;
+  background-color: #6B6F69;
+}
+
+
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   margin: 0;
   padding: 0;
   font-family: Helvetica, Arial, sans-serif;
   background-color: #eee;
+  min-width: 320px;
 }
 
 a {
+  color: black;
+  padding: 10px;
+}
+
+nav a:hover {
+  background-color: #D3D3D3;
+  border-radius: 15px;
+  transition: 0.5s;
+
+}
+
+nav li {
+  list-style-type: none;
+  display: inline;
+}
+
+nav a:not(:hover) {
+  transition: 0.5s;
+}
+
+h2 a {
   color: white;
 }
 
 h1 {
-  font-size: 20px;
+  display: flex;
+  font-size: 16px;
+  background-color: #0A0A09;
+  color: white;
+  width: 100%;
+  height: 40px;
+  margin: 0;
+  justify-content: center;
+  align-items: center;
 }
 
 .main-container {
   text-align: center;
-}
-
-.main-avatar-container {
-  padding: 20px;
-  background-color: teal;
 }
 
 .main-contacts {
@@ -66,14 +132,16 @@ h1 {
   margin-top: 20px;
   display: flex;
   padding: 10px;
-  background-color: azure;
+  background-color: #CCC999;
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.2);
-  position: absolute;
   font-weight: normal;
+  position: absolute;
+
 }
 
+
 .main-paper {
-  min-width: 320px;
+  min-width: 318px;
   max-width: 1000px;
   width: 100%;
   display: inline-flex;
@@ -82,48 +150,139 @@ h1 {
 pre {
   padding: 10px;
   position: absolute;
-  background-color: azure;
+  background-color: black;
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.2);
+  color: white;
+}
+
+.keyword-name {
+  color: #4682B4;
+}
+
+.function-name {
+  color: #F4A460;
+}
+
+.parameter-name {
+  color: #00FFF4;
+}
+
+#skills li {
+  color: #C3BEA1;
+}
+
+#skills li span {
+  color: black;
+}
+
+#soft-skills li {
+  color: #C3BEA1;
+}
+
+#soft-skills li span {
+  color: black;
+}
+
+#education li {
+  color: #C3BEA1;
+}
+
+#education li span {
+  color: black;
+}
+
+#languages li {
+  color: #C3BEA1;
+}
+
+#languages li span {
+  color: black;
 }
 
 h2 {
-  font-size: 16px;
+  font-size: 14px;
   margin: 0;
-  background-color: darkslategrey;
-  color: white;
+  background-color: #C3BEA1;
+  color: black;
   padding: 10px;
   border-radius: 2px;
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.2);
-}
-
-.main-paper-content {
-  display: flex;
-  width: 100%;
-  margin: 20px;
-  background-color: white;
-  border: 1px solid #ccc;
-  border-radius: 2px;
-  box-shadow: 0 0 8px rgba(0, 0, 0, 0.2);
+  text-transform: uppercase;
 }
 
 header {
   display: flex;
+  flex-direction: column;
   font-size: 12px;
   justify-content: center;
   align-items: center;
-  height: 53px;
-  background-color: #333;
-  color: white;
+}
+
+header nav {
+  margin-top: 20px;
+}
+
+nav a {
+  margin: 10px;
+  font-size: 12px;
+  color: black;
+  white-space: nowrap;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-weight: bold;
+  text-align: center;
+  justify-content: center;
+  line-height: 32px;
 }
 
 footer {
   display: flex;
+  flex-direction: column;
   font-size: 12px;
   justify-content: center;
   align-items: center;
-  height: 53px;
-  background-color: #333;
+  background-color: #0A0A09;
   color: white;
+}
+
+footer nav a {
+  color: white;
+}
+
+.projects li a {
+  color: #000;
+}
+
+.projects li span {
+  color: white;
+}
+
+.projects li {
+  color: #C3BEA1;
+}
+
+
+.footer-info {
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer-info a {
+  color: white;
+}
+
+.operator-name {
+  color: #C71585;
+}
+
+.meaning-name {
+  color: #D2691E;
+}
+
+.constant-name {
+  color: #6495ED;
 }
 
 .footer-year,
@@ -131,13 +290,13 @@ footer {
   margin-right: 20px;
 }
 
-.footer-link-to-school {
-  display: flex;
-  align-items: center;
-}
-
 .footer-logo {
   background-color: white;
   padding: 3px;
   margin-right: 20px;
+}
+
+.footer-link-to-school {
+  display: flex;
+  align-items: center;
 }
